BombSquad done in its first iteration, will proofread later

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
 				<!-- Differential Difference Amplifier -->
-					<section class="spotlight style1 orient-left content-align-right image-position-center onscroll-image-fade-in" id="first">
+					<section class="spotlight style1 orient-left content-align-right image-position-center onscroll-image-fade-in" id="second">
 						<div class="content">
 							<h2>Differential Difference Amplifier</h2>
 							<p>For a class final project I worked with a partner to build and measure as well as simulate three differential difference amplifiers. nMOS and pMOS transistors were breadboarded to collect data, and LTspice was used to simulate. We evaluated each circuit’s incremental output resistance, differential mode voltage gain, and incremental transconductance gain. </p>
@@ -60,7 +60,7 @@
 					</section>
 
 				<!-- SUITable -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="third">
 						<div class="content">
 							<h2>SUITable</h2>
 							<p>As part of the MIT Open Style Lab in summer 2016, I worked on a team with an occupational therapist and two fashion designers to create a garment for our client, Jim. Due to a spinal cord injury, Jim has limited feeling and range of motion in his arms and torso. This made it difficult for him to adjust traditional clothing throughout the day, so we created a customized jacket that he could wear in multiple climates. </p>
@@ -74,7 +74,7 @@
 					</section>
 
 				<!-- ASL glove -->
-					<section class="spotlight style1 orient-left content-align-right image-position-center onscroll-image-fade-in" id="first">
+					<section class="spotlight style1 orient-left content-align-right image-position-center onscroll-image-fade-in" id="fourth">
 						<div class="content">
 							<h2>ASL Glove</h2>
 							<p>In the fall of 2015, I worked on a team of four students to do a nine week open ended project. With only the constraint that our final product must include a mechanical, electrical, and software component, we chose to create a glove that interprets American Sign Language Fingerspelling and transmits letters to a cell phone. All designs, code, and instructions to create the glove are public online.</p>
@@ -90,7 +90,7 @@
 
 
 				<!-- Library Planters -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="fifth">
 						<div class="content">
 							<h2>Library Planters</h2>
 							<p>During the summer of 2015 I worked in the Olin College Library with other students, alumni, faculty, and staff to “rewrite the library.” Our goal was to make the library more accurately reflect the culture of the student body and become a more useful space. As part of those goals, I created a set of eleven custom, modular planters for the library. </p>
