resume button updated and replaced college email

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 							<p class="major"><!--[-->I'm a recent graduate of Olin College of Engineering with a BS in electrical and computer engineering.   <!--]--></p>
 							<ul class="actions">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">See my Work</a></li>
-								<li><a href="assets/LoganSweet_Nov2019_Resume.pdf"target="_blank" class="button">Download my Resume</a></li>
+								<li><a href="assets/LoganSweet_resume_March2020.pdf"target="_blank" class="button">Download my Resume</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -113,7 +113,7 @@
 								</header>
 								<div class="content">
 									<div class="box">
-										<p>Logan.Sweet@students.olin.edu</p>
+										<p>loganrsweet@gmail.com</p>
 										<p>615.584.8676</p>
 									</div>
 								</div>
@@ -125,7 +125,7 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="mailto:logan.sweet@students.olin.edu" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="mailto:loganrsweet@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 								<li><a href="https://www.linkedin.com/in/logansweet"target="_blank"  class="icon style2 fa-linkedin"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; Sweet 2017. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
