update hero text that I'm employed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<section class="banner style3 orient-right content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Hi, I'm Logan</h1>
-							<p class="major"><!--[-->I'm a recent graduate of Olin College of Engineering with a BS in electrical and computer engineering.   <!--]--></p>
+							<p class="major"><!--[-->I'm an electrical engineer based in the San Francisco bay area. I graduated from Olin College of Engineering in 2018 with a BS in electrical and computer engineering, and I currently work at Google as a hardware system integration engineer for Pixel phones.     <!--]--></p>
 							<ul class="actions">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">See my Work</a></li>
 								<li><a href="assets/LoganSweet_resume_March2020.pdf"target="_blank" class="button">Download my Resume</a></li>
