updated project text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <!-- Hapic Wheel -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Bomb Defusal Game (Page In Progress!)</h2>
+							<h2>Bomb Defusal Game</h2>
 							<p>For a final Elecanisms class project my team and I created a collaborative arcade game based on <i>Keep Talking and Nobody Explodes</i>. Our game runs on up to seven PIC24F microcontrollers that communicate via I2C, and is modular for different gameplay experiences each time. </p>
 							<ul class="actions vertical">
 								<li><a href="ProjectBombDefusalGame.html" class="button">Learn More</a></li>
