putting up an under construction notice while I redo the site + new resume upload

--- a/index.html
+++ b/index.html
@@ -18,20 +18,32 @@
 					<section class="banner style3 orient-right content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Hi, I'm Logan</h1>
-							<p class="major"><!--[-->I'm an electrical engineer based in the San Francisco bay area. I graduated from Olin College of Engineering in 2018 with a BS in electrical and computer engineering, and I currently work at Google as a hardware system integration engineer for Pixel phones.     <!--]--></p>
+
+
+							<!-- <p class="major">I'm an electrical engineer based in the San Francisco bay area. I graduated from Olin College of Engineering in 2018 with a BS in electrical and computer engineering, and I currently work at Google as a hardware system integration engineer for Pixel phones.</p> -->
+							<p class="major">I'm an electrical engineer with 6 years of experience starting my job search after a short sabbatical. I'm currently based in NYC, but I'm hoping to find a role on the west coast.  </p>
+							<p class="major"> Previously I worked on device system integration at Google, Meta, and Skydio. </p>
+							<h3>This page is under construction, but in the meantime you can download my resume or visit my LinkedIn using the buttons below. </h3>
+
+
+
 							<ul class="actions">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">See my Work</a></li>
-								<li><a href="assets/LoganSweet_resume_March2020.pdf"target="_blank" class="button">Download my Resume</a></li>
+								<!-- <li><a href="#first" class="button big wide smooth-scroll-middle">See my Work</a></li> -->
+								<li><a href="assets/LoganSweet_Resume_2025.04.10.pdf"target="_blank" class="button">Resume</a></li>
+								<li><a href="https://www.linkedin.com/in/logansweet"target="_blank"  class="icon style2 fa-linkedin"><span class="label">Email</span></a></li>
+								<p class="major">Last updated 11 April 2025, 6:52pm</p>
 							</ul>
 						</div>
-						<div class="image">
+
+
+						<!-- <div class="image">
 							<img src="images/profile_2018.jpg" alt="" />
-						</div>
+						</div> -->
 					</section>
 
 
                 <!-- Hapic Wheel -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<!-- <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Bomb Defusal Game</h2>
 							<p>For a final Elecanisms class project my team and I created a collaborative arcade game based on <i>Keep Talking and Nobody Explodes</i>. Our game runs on up to seven PIC24F microcontrollers that communicate via I2C, and is modular for different gameplay experiences each time. </p>
@@ -42,11 +54,11 @@
 						<div class="image">
 							<img src="images/bomb_light2.jpg" alt="" />
 						</div>
-					</section>
+					</section> -->
 
 
 				<!-- Differential Difference Amplifier -->
-					<section class="spotlight style1 orient-left content-align-right image-position-center onscroll-image-fade-in" id="second">
+					<!-- <section class="spotlight style1 orient-left content-align-right image-position-center onscroll-image-fade-in" id="second">
 						<div class="content">
 							<h2>Differential Difference Amplifier</h2>
 							<p>For a class final project I worked with a partner to build and measure as well as simulate three differential difference amplifiers. nMOS and pMOS transistors were breadboarded to collect data, and LTspice was used to simulate. We evaluated each circuit’s incremental output resistance, differential mode voltage gain, and incremental transconductance gain. </p>
@@ -57,10 +69,10 @@
 						<div class="image image-position-right">
 							<img src="images/BreadBoardCircuit2.jpg" alt="" />
 						</div>
-					</section>
+					</section> -->
 
 				<!-- SUITable -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="third">
+					<!-- <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="third">
 						<div class="content">
 							<h2>SUITable</h2>
 							<p>As part of the MIT Open Style Lab in summer 2016, I worked on a team with an occupational therapist and two fashion designers to create a garment for our client, Jim. Due to a spinal cord injury, Jim has limited feeling and range of motion in his arms and torso. This made it difficult for him to adjust traditional clothing throughout the day, so we created a customized jacket that he could wear in multiple climates. </p>
@@ -71,10 +83,10 @@
 						<div class="image">
 							<img src="images/top.jpg" alt="" />
 						</div>
-					</section>
+					</section> -->
 
 				<!-- ASL glove -->
-					<section class="spotlight style1 orient-left content-align-right image-position-center onscroll-image-fade-in" id="fourth">
+					<!-- <section class="spotlight style1 orient-left content-align-right image-position-center onscroll-image-fade-in" id="fourth">
 						<div class="content">
 							<h2>ASL Glove</h2>
 							<p>In the fall of 2015, I worked on a team of four students to do a nine week open ended project. With only the constraint that our final product must include a mechanical, electrical, and software component, we chose to create a glove that interprets American Sign Language Fingerspelling and transmits letters to a cell phone. All designs, code, and instructions to create the glove are public online.</p>
@@ -85,12 +97,12 @@
 						<div class="image image-position-right">
 							<img src="images/hextalhero.jpg" alt="" />
 						</div>
-					</section>
+					</section> -->
 
 
 
 				<!-- Library Planters -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="fifth">
+					<!-- <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="fifth">
 						<div class="content">
 							<h2>Library Planters</h2>
 							<p>During the summer of 2015 I worked in the Olin College Library with other students, alumni, faculty, and staff to “rewrite the library.” Our goal was to make the library more accurately reflect the culture of the student body and become a more useful space. As part of those goals, I created a set of eleven custom, modular planters for the library. </p>
@@ -101,11 +113,11 @@
 						<div class="image">
 							<img src="images/view2.jpg" alt="" />
 						</div>
-					</section>
+					</section> -->
 
 
 
-					<section class="wrapper style1 align-center">
+					<!-- <section class="wrapper style1 align-center">
 						<div class="inner">
 							<section>
 								<header>
@@ -119,18 +131,18 @@
 								</div>
 							</section>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Footer -->
-					<footer class="wrapper style1 align-center">
+					<!-- <footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="mailto:loganrsweet@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 								<li><a href="https://www.linkedin.com/in/logansweet"target="_blank"  class="icon style2 fa-linkedin"><span class="label">Email</span></a></li>
 							</ul>
-							<p>&copy; Sweet 2017. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; Sweet 2025. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
-					</footer>
+					</footer> -->
 
 			</div>
 
