updated resume hyperlink

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<!-- <p>Previously I worked on device system integration at Google, Meta, and Skydio.</p> -->
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">More about me</a></li>
-							  <li><a href="assets/LoganSweet_resume_2025.04.02.pdf"target="_blank" class="button">See my resume</a></li>
+							  <li><a href="assets/LoganSweet_resume.pdf"target="_blank" class="button">See my resume</a></li>
 							</ul>
 						</div>
 					</section>
