fixed broken resume link

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									<p>In the meantime please check out my resume and linkedin </p>
 									<ul class="actions">
 										<li><a target="_blank" href="https://www.linkedin.com/in/logansweet/" class="button">LinkedIn</a></li>
-										<li><a href="assets/LoganSweet_resume_2025.04.02.pdf"target="_blank" class="button">Resume</a></li>
+										<li><a href="assets/LoganSweet_resume.pdf"target="_blank" class="button">Resume</a></li>
 									</ul>
 									<p>Last updated 10am 14 April 2025</p>
 								</div>
