--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<div class="inner">
 							<H1><span class="image left"><img src="assets/2025_headshot.jpg" alt="" /></span>Hi, I'm Logan</H1>
 							<!-- <h1>Hi, I'm Logan</h1> -->
-							<p>I'm an electrical engineer with 6 years of experience in consumer electronics. I'm currently based in NYC, but I'm hoping to find my next role on the west coast.  </a><br />
+							<p>I'm an electrical engineer with 6 years of experience in consumer electronics. I'm currently in Portland Oregon, but I'm also open to roles in NYC and Seattle.  </a><br />
 							 </p>
 							<!-- <p>Previously I worked on device system integration at Google, Meta, and Skydio.</p> -->
 							<ul class="actions">
@@ -69,7 +69,7 @@
 										<li><a target="_blank" href="https://www.linkedin.com/in/logansweet/" class="button">LinkedIn</a></li>
 										<li><a href="assets/LoganSweet_resume.pdf"target="_blank" class="button">Resume</a></li>
 									</ul>
-									<p>Last updated 10am 14 April 2025</p>
+									<p>Last updated October 2025</p>
 								</div>
 							</div>
 						</section>
